welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:7: error: ';' expected but 'if' found.
        } if (estSurBiscuit()) {
          ^